--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test_task",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kristinakac.github.io/valantis",
   "dependencies": {
     "@ant-design/icons": "^5.3.1",
     "@reduxjs/toolkit": "^2.2.1",
@@ -13,6 +14,7 @@
     "axios-retry": "^4.0.0",
     "classnames": "^2.5.1",
     "formik": "^2.4.5",
+    "gh-pages": "^6.1.1",
     "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
